tests/doWhile/invalid/Syntax/DO-WHILE_whileNodone.wacc
# wrong position of while false - missing statement

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  do while false
    skip
end
